[adrian] - adding getModuleByCourseId
