# routes/moduleRouter.js
@@ -5,12 +5,18 @@ const checkId = require('../middlewares/checkId')
 const authenticate = require('../middlewares/authenticate')
 const checkRole = require('../middlewares/checkRole')
 
-const { Module } = require('../models')
+const { Module, Course } = require('../models')
 
 router
   .route('/')
   .post(authenticate, checkRole('admin'), moduleController.createModule)
   .get(moduleController.getModules)
+
+router.get(
+  '/course/:id',
+  checkId(Course),
+  moduleController.getModulesByCourseId,
+)
 
 router
   .route('/:id')
